--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       Coded by <a href="https://www.linkedin.com/in/mariagmakamine/">Maria Akamine</a>.
     </div>
     <div class="social">
-      <img src="/img/facebook.svg" width="36" height="36">
-      <img src="/img/twitter.svg" width="36" height="36">
-      <img src="/img/instagram.svg" width="36" height="36">
+      <img src="img/facebook.svg" width="36" height="36">
+      <img src="img/twitter.svg" width="36" height="36">
+      <img src="img/instagram.svg" width="36" height="36">
     </div>
   </footer>
 
